[project]
name = "healthcare-assistant"
version = "0.1.0"
description = "AI-powered Healthcare Assistant with multi-agent routing for symptom analysis, wellness advice, and medicine info"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2,<2.0",
    "langchain-core>=1.3,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langgraph>=1.1,<2.0",
    "pydantic>=2.11,<3.0",
    "python-dotenv>=1.0,<2.0",
    "gradio>=5.0,<7.0",
]
